--- a/OneDrive/Desktop/websites/rome-fine-finishes-website-main/rome-fine-finishes-website-main/package.json
+++ b/OneDrive/Desktop/websites/rome-fine-finishes-website-main/rome-fine-finishes-website-main/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
