--- a/OneDrive/Desktop/websites/rome-fine-finishes-website-main/rome-fine-finishes-website-main/package.json
+++ b/OneDrive/Desktop/websites/rome-fine-finishes-website-main/rome-fine-finishes-website-main/package.json
@@ -48,7 +48,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.1.0",
+    "next": "15.1.0",
     "next-themes": "latest",
     "openai": "^6.9.0",
     "react": "19.2.0",
