Force npm usage: Add .npmrc and update Amplify config

--- a/OneDrive/Desktop/glazyr-crm-lite-main/glazyr-crm-lite-main/amplify.yml
+++ b/OneDrive/Desktop/glazyr-crm-lite-main/glazyr-crm-lite-main/amplify.yml
@@ -3,6 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
+        - npm --version
         - npm ci --legacy-peer-deps
     build:
       commands:
