Update Netlify configuration for Next.js 16 with proper settings

--- a/OneDrive/Desktop/glazyr-crm-lite-main/glazyr-crm-lite-main/netlify.toml
+++ b/OneDrive/Desktop/glazyr-crm-lite-main/glazyr-crm-lite-main/netlify.toml
@@ -6,5 +6,9 @@
   package = "@netlify/plugin-nextjs"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--legacy-peer-deps"
+
+[functions]
+  node_bundler = "esbuild"
 
