Fix Amplify build: explicitly use npm instead of pnpm

--- a/OneDrive/Desktop/websites/slash-mcp-landing-page-main/.gitignore
+++ b/OneDrive/Desktop/websites/slash-mcp-landing-page-main/.gitignore
@@ -12,6 +12,11 @@ node_modules
 .pnp
 .pnp.js
 
+# Package manager lock files (using npm)
+bun.lockb
+pnpm-lock.yaml
+yarn.lock
+
 # Build outputs
 dist
 dist-ssr
