--- a/OneDrive/Desktop/websites/slash-mcp-landing-page-main/amplify.yml
+++ b/OneDrive/Desktop/websites/slash-mcp-landing-page-main/amplify.yml
@@ -3,6 +3,9 @@ frontend:
   phases:
     preBuild:
       commands:
+        - echo "Using npm as package manager"
+        - which npm || echo "npm not found in PATH"
+        - npm --version
         - npm ci
     build:
       commands:
@@ -14,4 +17,13 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+customHeaders:
+  - pattern: '**/*'
+    headers:
+      - key: 'X-Content-Type-Options'
+        value: 'nosniff'
+      - key: 'X-Frame-Options'
+        value: 'DENY'
+      - key: 'X-XSS-Protection'
+        value: '1; mode=block'
 
