--- a/OneDrive/Desktop/websites/slash-mcp-landing-page-main/amplify.yml
+++ b/OneDrive/Desktop/websites/slash-mcp-landing-page-main/amplify.yml
@@ -3,8 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
-        - echo "Forcing npm installation"
-        - npm ci || npm install
+        - echo "Installing dependencies with npm ci"
+        - npm ci
     build:
       commands:
         - npm run build
