--- a/OneDrive/Desktop/websites/slash-mcp-landing-page-main/amplify.yml
+++ b/OneDrive/Desktop/websites/slash-mcp-landing-page-main/amplify.yml
@@ -2,9 +2,9 @@ version: 1
 frontend:
   phases:
     preBuild:
-      commands:
-        - echo "Installing dependencies with npm ci"
-        - npm ci
+    commands:
+        - echo "Installing dependencies with npm ci (fallback to npm install if lockfile missing)"
+        - if [ -f package-lock.json ]; then npm ci; else npm install; fi
     build:
       commands:
         - npm run build
